updated RegisterWithNameAndType_Test() to handle candlepin bug 1455361 change restricting the registration of a --type=candlepin consumer